--- a/React-project/src/components/nav/nav.styl
+++ b/React-project/src/components/nav/nav.styl
@@ -1,4 +1,27 @@
 .navWarpper  
     width: 100%
     height: 100%
-    
+    text-align: center
+    background: #222430
+    color: #757993
+    font-weight: 700
+    font-size: 14px
+    padding: 20px 0 20px 0
+    .navValter 
+        width: 40px
+        height: 40px
+        margin: 0  auto
+        padding-bottom: 10px;
+        border-radius: 50%;
+        background-image: url('../../assets/images/tangqi.jpeg')
+        background-repeat:no-repeat
+        background-size:100% 100%
+        -moz-background-size:100% 100%
+    .navItem
+        padding: 15px
+        &:hover
+            color: white
+            cursor: pointer
+
+
+
