--- a/React-project/src/main.css
+++ b/React-project/src/main.css
@@ -7,7 +7,8 @@
     width: 120px;
     height: 100%;
     float: left;
-    background: red
+    text-align: center;
+    /* background: red */
 }
 
 .mainContent {
