--- a/React-project/src/components/nav/nav.styl
+++ b/React-project/src/components/nav/nav.styl
@@ -10,15 +10,15 @@
     .navValter 
         width: 40px
         height: 40px
-        margin: 0  auto
-        padding-bottom: 10px;
+        margin: 0  auto 20px
+        padding-bottom: 20px;
         border-radius: 50%;
         background-image: url('../../assets/images/tangqi.jpeg')
         background-repeat:no-repeat
         background-size:100% 100%
         -moz-background-size:100% 100%
     .navItem
-        padding: 15px
+        padding: 10px
         &:hover
             color: white
             cursor: pointer
