--- a/React-project/src/main.css
+++ b/React-project/src/main.css
@@ -14,5 +14,26 @@
 .mainContent {
     height: 100%;
     margin-left: 120px ;
-    background: green;
+    /* background: green; */
+}
+.navTop {
+    height: 50px;
+    width: 100%;
+    line-height: 50px;
+    padding-left: 20px;
+    border-bottom: 1px solid gray;
+}
+.name {
+    display: inline-block;
+    font-size: 14px;
+    color: #595961;
+    letter-spacing: 0;
+    line-height: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+.function {
+    display: inline-block;
+    float: right;
+    padding-right: 20px;
 }
