概况页跳转

--- a/React-project/src/components/home/home.styl
+++ b/React-project/src/components/home/home.styl
@@ -33,15 +33,22 @@
             b
                 font-weight: 700
                 font-size: 16px
-            .fun-img
-                width: 64px
-                height: 64px
-                display: inline-block
-                overflow: hidden
-                position: relative;
-                background-color: #2589ff;
-                text-align: center;
-                border-radius: 4px;
-                img 
-                    padding: 20px
+            .commonClick
+                .fun-img
+                    width: 64px
+                    height: 64px
+                    margin:  40px 40px 0 40px
+                    display: inline-block
+                    overflow: hidden
+                    position: relative
+                    background-color: #2589ff
+                    text-align: center
+                    border-radius: 4px
+                    img 
+                        cursor:pointer
+                        padding-top: 15px
+                .displays
+                    display: inline-block
+                    p
+                        text-align: center
         
